Захистити фан-стіну від спаму та додати приховування дописів
